# ChangeLog for dev-python/mccabe
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/mccabe/ChangeLog,v 1.17 2015/04/14 12:50:13 ago Exp $

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> mccabe-0.2.1.ebuild:
  Stable for ia64, wrt bug #540290

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> mccabe-0.2.1.ebuild:
  Stable for alpha, wrt bug #530600

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> mccabe-0.2.1.ebuild:
  Drop old Python implementations

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> mccabe-0.2.1.ebuild:
  ppc stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> mccabe-0.2.1.ebuild:
  ppc64 stable, bug 540290

  01 Jan 2015; Markus Meier <maekke@gentoo.org> mccabe-0.2.1.ebuild:
  arm stable, bug #530600

  30 Dec 2014; Jeroen Roovers <jer@gentoo.org> mccabe-0.2.1.ebuild:
  Stable for HPPA (bug #530600).

  20 Aug 2014; Anthony G. Basile <blueness@gentoo.org> mccabe-0.2.1.ebuild:
  Keyword ~ppc ~ppc64, bug #508282

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> mccabe-0.2.1.ebuild:
  Keyworded on alpha, bug #508282

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> mccabe-0.2.1.ebuild:
  keyword ~ia64 wrt bug #508282

  06 Jun 2014; Ian Delaney <idella4@gentoo.org> mccabe-0.2.1.ebuild:
  drop py2.6 add py3.4

  04 May 2014; Markus Meier <maekke@gentoo.org> mccabe-0.2.1.ebuild:
  add ~arm, bug #508282

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> mccabe-0.2.1.ebuild:
  Marked ~hppa (bug #508282).

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> mccabe-0.2.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> mccabe-0.2.1.ebuild:
  Stable for x86, wrt bug #450086

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> mccabe-0.2.1.ebuild:
  Stable for amd64, wrt bug #450086

*mccabe-0.2.1 (31 May 2013)

  31 May 2013; Ian Delaney <idella4@gentoo.org> +mccabe-0.2.1.ebuild,
  +metadata.xml: