@@ -2,23 +2,15 @@
 Hash: SHA256
 
 DIST mccabe-0.2.1.tar.gz 5031 SHA256 5a2a170e47de5593a6abfae1e9542bd2c3924ac62bbe4e6ed96c953c0352243a SHA512 7155e52063e786c140c541f1410d0c319387b4b5f24ec3c60ba3d5a963a92d0ee545254559941ac0dbe961f46750c0e61271fbe82653c6b1465c0a13b31ec325 WHIRLPOOL 1db80033f91a24029e6757847d11528cb01c2aff2a2b40c947f969191f767fe6b93fd9adfb685eee8bcb03ba9719f852d8a5db7e1b27395acb93d973f35d09d8
+DIST mccabe-0.3.tar.gz 6127 SHA256 3d8ca9bf65c5014f469180544d1dd5bb5b9df709aad6304f9c2e4370ae0a7b7c SHA512 3bb176d486de5e0d3de8db0bf923b4b03e5ad2fd82df079babd6e6551afe9077b956698ac335f23d340a16212d73c1c5ab5a3055d2788b7f81040f3cb0d1b4ee WHIRLPOOL bfa0480cca9cc082f60c20d07d6edac203c5e9144f2caf57576304dbf01c8a96b19e111f9e1abe5774a4de235729d69c3c89d4fddf8213f403568228e92f38f6
 EBUILD mccabe-0.2.1.ebuild 642 SHA256 7b1a8d5b3e8c4f2923594dd86d3e58d149654c1144a1546e4fd6c3b2d3c9f74c SHA512 365ec0646cc392b735583527154f6b87af235a0ff138d03998761fb290ad7be109b3ff10aadd2de037d7238492b8697fe17ece7c86b40d07e85b78a19df6d2b2 WHIRLPOOL a425aaf7a71f15533ab907311284d11d786876ad0c6f173624ead420c532f84c8288361c99a15807ba2f32382b05cfff8ea9b2f2d7671628764c52535bb08da9
-MISC ChangeLog 2035 SHA256 7d72178376b8c230cc2b76e7caa6822470d0ea193e89f95936eb1cd2929f77e4 SHA512 1a2c65a1564b3c58cf32dce464308a5de5ad0899bfa5725f564a802f5ba7c2755405037e2334140b10d77dfce86ff91a62ea16dd8b227fe7d6789914997a9717 WHIRLPOOL 2be4f96b28d8bbf53ae783f193eb80ebd1445cb70683d67e9e674da37b95748f3f5ccbd603bb04e15092b5d60a3123ee5bc2773760c417749df0574443c85c9a
+EBUILD mccabe-0.3.ebuild 651 SHA256 380f48cfdf167c4e0810b4e214def5608a1002d0ec0fe74b3de664f03f53c294 SHA512 0c422e84f89cacffc505a23ccb5b395c36af1b351667f1a9565553febe1cdbee9ad6d9eb7230c2989cec76616b410f968106d0b3600c325f317e5b89e4da51e5 WHIRLPOOL 2cacee065248f3018ec6004e090e1e969677e09585c99f109197fa94119a5732586add1fc4b4f39f46621a176bcaab595a81ea0cec10e715c6091c24d4235711
+MISC ChangeLog 2205 SHA256 2b6db7cba5c0757d95251675e09b7197f7ff60c93001f6aae3e70d683bb27e34 SHA512 ac3b953212c810fd3f075500ebadf91709d00ee239b065066a29aca07f28b4b89bf911f731528a2a84fb477c4a81b378b5369e4c0c5c80e69dec5a0ab4305c03 WHIRLPOOL e1b811f0efe5a41a1b4181a15225417c61cb84c032fca6e67d48bdc5c8a459ea462673704a0858b0199ee3f2bb7c3cd113bdd679c7f63637ca071eca1a42911a
 MISC metadata.xml 161 SHA256 6f41e9b782499f6bac80760066dc5ebb307e73d31d2080f2eaa383b8a236c68e SHA512 9d77a0cf6ef95d95fe0e41852a1ddedc8bc4a82d39fa75e8bbf760ba835deebe6ac3beddc83b9b70e381cee31936f54bb2db7cb88357ed2228c9e972cf2cac47 WHIRLPOOL 1f1ee9aa1b4b8747fb5f6c9234263952071a1a90100df893eb7fed974ea7c63639796521cfa1fde8929fc2f1bf0cc65e88ef6d703a2dff633816ff87cbf21411
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLQ0GAAoJELp701BxlEWfA8kP/21PRK2D07YM/qJxICm6Gn3B
-kvZEsTow7WcViFVz+r1EY4kfL8zLY5tmzWm6aX3Sd9FLbKW9g03TW+JGN2QUlDIA
-/+FX/sL+hTK1Fr1pPJ6dY2KKLS00VxRtFldkBQ64bmtqO+JgS55odFAgHaSYk+o6
-YAsJgyaRVPZi3KKbrGNlBMYE8JbOxv5CZORDL4s66P2VABacNP0z4clDSKcf5n/e
-rRL2efgpvshcPIckSzSNfGs+hce7YOAjlseCBHdjvRFIaWnnIEa7agxgKd9qOUgw
-HahZoZc8ucVsWQ38AT2Ag2ZcP3wMXpZRiQ3flk+bFLxVSt1g2LViOpZ43UUXpOrZ
-/FN7vjZTjnVwfas7iixN/TrTHcnZ3ent9SPzc0JQ77wMvMfBZszZtprYFCn7cXT/
-IBUSLPI5njmSANyLo4bWRGfpeFEFz9GF19AYme76bBYJaBr8VFqSx8mdV1pHP1ox
-IAYIj6fJksQgDD5cu8YzhK9UBi6lPl9o0HOP9ENCt8zzOHQWaFCFP8a7ZLckkMPH
-M4hZ/kaqzvcKn1yFGuObc/NTvTNzYwvvEKD3TENnv+fMLOW/oJjSqInrugVk/KKj
-CFH00QXeQT9XKM3Wq4Gleaj+ME9eUmtDLu8SIiX+KhFH0n6G5rIlhi1UdXSR1gy2
-b2FE1AnphQqFj2gySjqs
-=lULh
+iEYEAREIAAYFAlU12gEACgkQso7CE7gHKw2JmQCgvPvuxueUaZXaL3WMjrM7GFYr
+zREAoIBaYC5UOQF4sWgEmZrsZCKHP8Xh
+=+W1/
 -----END PGP SIGNATURE-----
